# zingor

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  deploy.sh  huey-deployment.md  justfile  main.py  manage.py  pyproject.toml
.github/workflows/: deploy.yaml  discord-release.yaml
alexis_wiki/: assassin.html  bard.html  charisma.html  cleric.html  constitution.html  dexterity.html  druid.html  fighter.html  illusionist.html  intelligence.html  mage.html  monk.html  paladin.html  ranger.html  saving_throws.html  thief.html  wisdom.html
characters/: admin.py  apps.py  auth_emails.py  context_processors.py  fields.py  forms.py  jsonize.py  layout.py  microformats.py  models.py  rules.py  sage.py  tasks.py  types.py  units.py  units.txt  urls.py  views.py  wiki_export.py  wiki_links.py  wiki_sync.py
characters/migrations/: 0001_initial.py  0002_alter_hitdie_options_hitdie_is_bodymass_and_more.py  0003_character_percentile_strength.py  0004_condition_scope.py  0005_alter_condition_scope.py  0006_sage.py  0007_item_container_fields.py  0008_profile.py  0009_add_spell_is_memorized.py  0010_remove_action_model.py  0011_bonushitpoints.py  0012_layoutorder.py  0013_profile_display_name.py  0014_item_quantity.py  0015_consolidate_duplicate_items.py  0016_item_currency.py  0017_coins_to_items.py  0018_remove_character_coin_fields.py  0019_character_is_active.py  0020_alter_sagestudypoints_options.py  0021_character_wiki_url.py  0022_character_sync_from_wiki.py  0023_character_kind.py  0024_character_armor_class.py  0025_sagestudypoints_hidden.py  0026_sageabilitypoints.py  0027_sageabilitypoints_source.py
characters/templatetags/: character_tags.py
characters/tests/: test_email.py  test_introspection.py  test_jsonize.py  test_layout.py  test_models.py  (+10 more)
deploy/: doit.sh  zingor.service
docs/: conf.py  display-names.md  external-synchronization.md  index.md  wiki-export.md
ops/: Caddyfile.snippet  zingor-huey.service  zingor.service
plans/: inventory-issues.md
zingor/: asgi.py  settings.py  urls.py  wsgi.py
(+67 files in other folders)
