[project]
name = "zingor"
version = "0.1.0"
description = "D&D character tracker web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "pint>=0.24",
    "attrs>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.ruff.lint]
select = ["I"] # sort imports

[tool.ruff.lint.isort]
combine-as-imports = true
