[project]
name = "zingor"
version = "0.1.4"
description = "D&D character tracker web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "pint>=0.24",
    "attrs>=24.0",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "sentry-sdk[django]>=2.60.0",
    "requests>=2.34.2",
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
]

[tool.ruff.lint]
select = ["I"] # sort imports

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "zingor.settings"
testpaths = ["characters/tests"]
