[project]
name = "zingor"
version = "0.2.5"
description = "D&D character tracker web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "pint>=0.24",
    "attrs>=24.0",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "sentry-sdk[django]>=2.60.0",
    "requests>=2.34.2",
    "bs4>=0.0.2",
    "huey>=3.2.1",
    "peewee>=4.2.6",
]

[dependency-groups]
dev = [
    "coverage>=7.15.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
]
docs = [
    "myst-parser>=5.1.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.ruff.lint]
select = ["I"] # sort imports

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "zingor.settings"
testpaths = ["characters/tests"]
